2005-09-13  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-properties-dialog.c: Remove finalize method. Fix build
	problem

2005-09-13  Esteban Sanchez  <esteban@steve-o.org>

	* data/comics.xml: s/simple/date. Added some daily strips from spanish
	newspapers.
	
	* src/Makefile.am: Added buoh-comic-manager* and removed
	comic-simple.[ch] to buoh_SOURCES
	
	* src/buoh-comic-manager.[ch]: Changed some properties to
	CONSTRUCT_ONLY. Free the comic list in the finalize.
	
	* src/buoh-comic-manager-date.[ch]: Updated with fixing of leaks, bugs
	and other stuff.
	
	* src/buoh-comic-list.[ch]: Changed to store a BuohComicManager. Added
	a get_comic_manager method.
	
	* src/buoh-comic.[ch]: Adapted to the new comic manager, now it's
	nothing more than an URI, a pixbuf and a date.
	
	* src/buoh-properties-dialog.[ch]: Now it understand a comic manager
	instead of a BuohComic.
	
	* src/buoh-window.c: Updated to use the comic manager. Give code to
	previous and next buttons callbacks.
	
	* src/buoh.c: Create BuohComicManagers instead of BuohComic when
	reading XML comics file.
	
	* TODO: Updated (new tasks added)
	
2005-09-13  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/buoh.glade: Removed dialogs

	* src/buoh-add-comic-dialog.c: Remove glade
	* src/buoh-comic-list.c:
	* src/buoh-properties-dialog.c:
	Some UI improvements

2005-09-12  Esteban Sanchez <esteban@steve-o.org>

	* src/buoh-comic-manager-date.[ch]: Added.
	
	* src/buoh-comic-manager.[ch]: Updated with minor changes to give the
	main functionallity to the class.

2005-09-12  Esteban Sanchez <esteban@steve-o.org>
	* configure.in, data/Makefile.am: Changed to been parsed successfully
	with gnome-build.

2005-09-11  Carlos Garcia Campos  <carlosgc@gnome.org>

	* Makefile.am: s/extra_DIST/EXTRA_DIST/. Remove pixmaps and interfaces
	directories

	* configure.in: s/interfacesdir/uidir/

	* data/Makefile.am:
	* src/Makefile.am:
	* interfaces/Makefile.am: Removed
	* pixmaps/Makefile.am: Removed